--- a/AspNetWebApp/Web.config
+++ b/AspNetWebApp/Web.config
@@ -26,6 +26,10 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.5" />
+    <authentication mode="Forms">
+      <forms loginUrl="/Login/Index/">
+      </forms>
+    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
