Repository Pattern Arch.

--- a/AspNetWebApp/Web.config
+++ b/AspNetWebApp/Web.config
@@ -96,10 +96,21 @@
       <!--<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />-->
     </providers>
     <defaultConnectionFactory type="Npgsql.NpgsqlConnectionFactory, EntityFramework6.Npgsql" />
+    <interceptors>
+
+      <interceptor type="System.Data.Entity.Infrastructure.Interception.DatabaseLogger, EntityFramework">
+
+        <parameters>
+          <parameter value="\Users\volkan\LogOutput.txt" />
+          <parameter value="true" type="System.Boolean" />
+        </parameters>
+      </interceptor>
+    </interceptors>
+    
   </entityFramework>
   <connectionStrings>
     <!--Postgresql-->
-    <add name="Context" connectionString="Server=127.0.0.1;Port=5432;User Id=postgres;Password=123456;Database=otomasyon" providerName="Npgsql" />
+    <add name="AspNetWebAppContext" connectionString="Server=127.0.0.1;Port=5432;User Id=postgres;Password=123456;Database=otomasyon" providerName="Npgsql" />
     <!-- provider invariant name, configured above -->
   </connectionStrings>
   <system.data>
